🚀 Production Ready: Add Vercel deployment with security & performance optimization
✅ Security Enhancements:
- Comprehensive security headers (CSP, HSTS, X-Frame-Options, etc.)
- XSS and clickjacking protection
- HTTPS enforcement
- Content Security Policy with strict rules
- API endpoint security headers

⚡ Performance Optimizations:
- Google Fonts optimization (Inter with swap display)
- Image optimization configuration (AVIF/WebP support)
- Advanced caching strategies for static assets
- SWC minification enabled
- Production console.log removal
- React strict mode enabled

📦 Vercel Configuration:
- Tokyo region (hnd1) for optimal Japan performance
- Serverless functions configuration
- Auto-deployment from GitHub
- Cache headers for static assets
- PWA manifest for mobile support

🔒 Security Files:
- Environment variables template (.env.example)
- Enhanced .gitignore for sensitive data
- robots.txt to prevent search engine indexing
- SEO metadata optimization

📚 Documentation:
- Comprehensive deployment guide (DEPLOYMENT_GUIDE.md)
- Custom domain setup instructions
- Environment variables configuration guide
- Troubleshooting section

🎯 Ready for production deployment to Vercel!

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
+.env.production
 
 # vercel
 .vercel
@@ -34,3 +36,37 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# セキュリティ: 機密情報
+*.key
+*.pem
+*.cert
+*.crt
+secrets/
+credentials/
+
+# ログファイル
+*.log
+logs/
+server.log
+nextjs.log
+
+# IDEファイル
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS固有
+.DS_Store
+Thumbs.db
+
+# テスト
+coverage/
+.nyc_output/
+
+# バックアップ
+*.backup
+*.bak
+*.tmp
